fix: resolve Dependabot security alerts
- Update langchain-community to >=0.3.27 (CVE-2025-6984, GHSA-pc6w-59fv-rh23) - HIGH severity
  Fixes XML External Entity (XXE) vulnerability in EverNoteLoader component

- Update PyTorch to >=2.8.0 (CVE-2025-3730, GHSA-887c-mr87-cxwp) - MEDIUM severity
  Fixes Improper Resource Shutdown vulnerability in torch.nn.functional.ctc_loss
  Also addresses CVE-2025-2953 (GHSA-3749-ghw9-m3mg) - local DoS in torch.mkldnn_max_pool2d

- Update h2 to >=4.3.0 (CVE-2025-57804, GHSA-847f-9342-265h) - MEDIUM severity
  Fixes HTTP Request Smuggling due to illegal characters in headers

- Update uv to >=0.8.6 (CVE-2025-54368, GHSA-8qf3-x8v5-2pj8)
  Fixes ZIP payload obfuscation through parsing differentials

Addresses Dependabot alerts #305, #304, #303, #302, #299, and #297

--- a/examples/integrations/crewai/example/pyproject.toml
+++ b/examples/integrations/crewai/example/pyproject.toml
@@ -2,7 +2,12 @@
 name = "example"
 version = "0.0.0"
 requires-python = ">=3.10,<3.14"
-dependencies = ["crewai[tools]>=0.126.0,<1.0.0"]
+dependencies = [
+    "crewai[tools]>=0.126.0,<1.0.0",
+    "h2>=4.3.0",
+    "langchain-community>=0.3.27",
+    "uv>=0.8.6",
+]
 
 [project.scripts]
 example = "example.main:run"
