--- a/recipes/supervised_fine_tuning/axolotl/pyproject.toml
+++ b/recipes/supervised_fine_tuning/axolotl/pyproject.toml
@@ -2,7 +2,7 @@
 name = "tensorzero-recipe-sft-axolotl"
 version = "0.0.0"
 readme = "README.md"
-requires-python = ">=3.11,<3.12"
+requires-python = ">=3.11"
 dependencies = [
     "awscli",
     "clickhouse-connect",
@@ -17,6 +17,6 @@ dependencies = [
     "setuptools",
     "tensorzero",
     "toml",
-    "torch==2.6.0",
+    "torch>=2.8.0",
     "wheel",
 ]
